Fix navigation sidebar alignmet, update AP icon.

--- a/scss/partials/_navigation_sidebar.scss
+++ b/scss/partials/_navigation_sidebar.scss
@@ -27,7 +27,7 @@
   .internal {
     @include avenir_M();
     font-size: 14px;
-    line-height: 1.71;
+    line-height: 25px;
     color: $ui_grey;
     text-decoration: none;
 
@@ -46,7 +46,7 @@
   div.drafts-label {
     @include avenir_M();
     font-size: 15px;
-    line-height: 1.71;
+    line-height: 25px;
     color: $ui_grey;
     text-decoration: none;
 
@@ -75,12 +75,13 @@
   div.all-posts-label {
     @include avenir_H();
     font-size: 15px;
-    line-height: 1.71;
+    line-height: 25px;
     color: $deep_navy;
     text-decoration: none;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    // padding-top: 2px;
 
     @include mobile() {
       font-size: 14px;
@@ -107,7 +108,7 @@
     color: $carrot_green;
     @include avenir_M();
     font-size: 14px;
-    line-height: 1.71;
+    line-height: 25px;
     text-decoration: none;
 
     @include mobile() {
@@ -147,7 +148,7 @@
     color: $deep_navy;
     @include avenir_M();
     font-size: 14px;
-    line-height: 1.71;
+    line-height: 25px;
     text-decoration: none;
 
     @include mobile() {
@@ -162,7 +163,7 @@
   div.all-posts-label, div.drafts-label {
     color: $deep_navy;
     font-size: 15px;
-    line-height: 1.71;
+    line-height: 25px;
     text-decoration: none;
   }
 }
@@ -260,7 +261,7 @@ div.left-navigation-sidebar {
   }
 
   a.all-posts {
-    margin-bottom: 40px;
+    margin-bottom: 16px;
 
     @include mobile() {
       margin-bottom: 0px;
@@ -278,7 +279,7 @@ div.left-navigation-sidebar {
     outline: none;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
-    padding-left: 32px;
+    padding-left: 16px;
 
     @include mobile() {
       padding-left: 0px;
@@ -303,10 +304,10 @@ div.left-navigation-sidebar {
     }
 
     div.all-posts-label, div.drafts-label {
-      padding: 2px 5px 1px 5px;
+      padding: 3px 0px 0px;
       width: 148px;
       text-align: left;
-      margin-left: 16px;
+      margin-left: 32px;
 
       @include mobile() {
         margin-left: 34px;
@@ -318,11 +319,11 @@ div.left-navigation-sidebar {
     div.all-posts-icon {
       background-image: cdnUrl("/img/ML/digest_icon_grey.svg");
       background-size: 18px 16px;
+      background-repeat: no-repeat;
+      background-position: center;
       width: 16px;
-      height: 16px;
+      height: 28px;
       float: left;
-      margin-left: -4px;
-      margin-top: 6px;
 
       @include mobile() {
         margin-left: 0px;
@@ -341,12 +342,11 @@ div.left-navigation-sidebar {
 
       @include mobile() {
         background-image: cdnUrl("/img/ML/drafts_icon_grey.svg");
-        background-size: 16px 16px;
+        background-repeat: no-repeat;
+        background-position: center;
         width: 16px;
-        height: 16px;
+        height: 28px;
         float: left;
-        margin-left: 0px;
-        margin-top: 0px;
         opacity: 1;
         display: block;
       }
@@ -359,7 +359,7 @@ div.left-navigation-sidebar {
   }
 
   a.drafts {
-    margin-bottom: 40px;
+    margin-bottom: 16px;
 
     @include mobile() {
       margin-bottom: 0px;
@@ -381,9 +381,9 @@ div.left-navigation-sidebar {
     }
 
     .left-navigation-sidebar-top-title {
-      padding: 0px 0 0px 32px;
+      padding: 0px 0px 0px 48px;
       margin: 0;
-      margin-bottom: 16px;
+      margin-bottom: 8px;
 
       @include mobile() {
         background-color: $oc_gray_8;
@@ -399,7 +399,6 @@ div.left-navigation-sidebar {
         color: $light_ui_grey;
         float: left;
         cursor: default;
-        margin-left: 21px;
 
         @include mobile() {
           margin-left: 34px;
@@ -460,7 +459,7 @@ div.left-navigation-sidebar {
       cursor: default;
       border-top-right-radius: 3px;
       border-bottom-right-radius: 3px;
-      padding-left: 24px;
+      padding-left: 16px;
       margin: 0;
       text-decoration: none;
 
@@ -503,12 +502,14 @@ div.left-navigation-sidebar {
 
       div.public {
         float: left;
-        margin-left: 8px;
-        margin-top: 10px;
-        width: 12px;
-        height: 12px;
+        // margin-left: 8px;
+        // margin-top: 10px;
+        width: 16px;
+        height: 28px;
         background-image: cdnUrl("/img/ML/board_public.svg");
         background-size: 12px 12px;
+        background-position: center;
+        background-repeat: no-repeat;
         opacity: 0.5;
 
         @include mobile() {
@@ -523,14 +524,16 @@ div.left-navigation-sidebar {
         }
       }
 
-      div.private{
+      div.private {
         float: left;
-        margin-left: 9px;
-        margin-top: 9px;
-        width: 9px;
-        height: 11px;
+        // margin-left: 9px;
+        // margin-top: 9px;
+        width: 16px;
+        height: 28px;
         background-image: cdnUrl("/img/ML/board_private.svg");
         background-size: 9px 11px;
+        background-position: center;
+        background-repeat: no-repeat;
         opacity: 0.5;
 
         @include mobile() {
@@ -546,25 +549,10 @@ div.left-navigation-sidebar {
       }
 
       div.board-name {
-        margin-left: 24px;
-
-        @include mobile() {
-
-          &.team-board {
-            margin-left: 32px;
-          }
-
-          &.private-board {
-            margin-left: 24px;
-          }
-
-          &.public-board {
-            margin-left: 24px;
-          }
-        }
+        margin-left: 32px;
 
         div.internal {
-          padding: 4px 5px 1px 4px;
+          padding: 3px 0px 0px;
           white-space: nowrap;
           text-overflow: ellipsis;
           overflow: hidden;
@@ -714,7 +702,7 @@ div.left-navigation-sidebar {
 
       span {
         font-size: 14px;
-        line-height: 1.71;
+        line-height: 25px;
         color: $ui_grey;
         margin-left: 5px;
 
@@ -752,7 +740,7 @@ div.left-navigation-sidebar {
 
       span {
         font-size: 14px;
-        line-height: 1.71;
+        line-height: 25px;
         color: $ui_grey;
         margin-left: 5px;
 
